fix: Chat scrollbar not working

--- a/frontend/src/styles/chat.scss
+++ b/frontend/src/styles/chat.scss
@@ -9,25 +9,26 @@
     flex-grow: 1;
 
     display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-
-    list-style-type: none;
-    padding: 0px;
-    margin: 0px;
+    flex-direction: column-reverse;
 
     overflow-y: scroll;
     overflow-x: hidden;
 
-    li {
-      flex-shrink: 0;
-    }
+    ul {
+      list-style-type: none;
+      padding: 0px;
+      margin: 0px;
 
-    // Make scrollbar scroll to new posts automatically
-    // when scrolled to the bottom.
-    scroll-snap-type: y proximity;
-    li:last-child {
-      scroll-snap-align: end;
+      li {
+        flex-shrink: 0;
+      }
+
+      // Make scrollbar scroll to new posts automatically
+      // when scrolled to the bottom.
+      scroll-snap-type: y proximity;
+      li:last-child {
+        scroll-snap-align: end;
+      }
     }
   }
 
